--- a/Views/Home/RegistrarView.cshtml
+++ b/Views/Home/RegistrarView.cshtml
@@ -15,8 +15,8 @@
             <h2 style="color: #E0BD9F;">INICIAR SESIÓN</h2>
             <hr style="border-color: #E0BD9F; border-width: 2px; margin: 10px 0;">
             
-            <input class="IngresoUsername"  type="text" name="Username" placeholder="Usuario" required/>
-            <input type="password" name="Contraseña" placeholder="Contraseña" required/>
+            <input class="IngresoUsername"  type="text" name="Username" placeholder="Usuario" value="pau_lo12" required/>
+            <input type="password" name="Contraseña" placeholder="Contraseña" value="pau123" required/>
             </p>
             <p>
                 <button class="round-button" type="submit">Iniciar Sesión</button>
