--- a/Views/Home/AgregarReceta.cshtml
+++ b/Views/Home/AgregarReceta.cshtml
@@ -81,10 +81,10 @@
                                         </div>
 
                                     </div>
-                                
+                                </fieldset>
 
                                 <h1>Ingredientes</h1>
-                                
+                                    <fieldset>
                                     <!-- <h2>Ingredientes</h2> -->
                                     <div class="row">
                                         <div class="col-lg-6">
