--- a/Views/Home/RegistrarView.cshtml
+++ b/Views/Home/RegistrarView.cshtml
@@ -15,8 +15,8 @@
             <h2 style="color: #E0BD9F;">INICIAR SESIÓN</h2>
             <hr style="border-color: #E0BD9F; border-width: 2px; margin: 10px 0;">
             
-            <input class="IngresoUsername"  type="text" name="Username" placeholder="Usuario" value="pau_lo12" required/>
-            <input type="password" name="Contraseña" placeholder="Contraseña" value="pau123" required/>
+            <input class="IngresoUsername"  type="text" name="Username" placeholder="Usuario" value="tomi_2" required/>
+            <input type="password" name="Contraseña" placeholder="Contraseña" value="tommm111" required/>
             </p>
             <p>
                 <button class="round-button" type="submit">Iniciar Sesión</button>
@@ -42,7 +42,6 @@
             <input type="email" name="Mail" placeholder="Mail" />
             <input type="password" name="Contraseña" placeholder="Contraseña" />
             <input type="password" name="ConfirmarContraseña" placeholder="Confirmar Contraseña" />
-            <input type="text" name="Foto" placeholder="Foto de Perfil" />
             <input class="round-button" type="submit" name="" value="Registrarse" />
             <p class="signup">
              ¿Ya tenés una cuenta?
